@@ -34,6 +34,7 @@
 #include "svn_subst.h"
 #include "svn_auth.h"
 
+#include "ProgressDlg.h"
 #include "SVNPrompt.h"
 #include "SVNRev.h"
 
@@ -249,7 +250,7 @@ public:
 	 *					when exporting from a repository.
 	 * \param force		TRUE if existing files should be overwritten
 	 */
-	BOOL Export(CString srcPath, CString destPath, SVNRev revision, BOOL force = TRUE);
+	BOOL Export(CString srcPath, CString destPath, SVNRev revision, BOOL force = TRUE, CProgressDlg * pProgDlg = NULL, BOOL extended = FALSE);
 	/**
 	 * Switch working tree path to URL at revision
 	 *
