@@ -35,6 +35,8 @@
        browser. (Stefan)
 - ADD: New "export here" command in the right-drag
        context menu. (Stefan)
+- ADD: New "export" function which exports unversioned
+       files and folders too. (Stefan)
 - CHG: Searching in the log dialog now also searches
        the changed paths. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
